--- a/kafka-dnf.yml
+++ b/kafka-dnf.yml
@@ -1,18 +1,18 @@
 - name: Read messages from a kafka topic and act on them
-  hosts: all
+  hosts: kafka.example.com
   ## Define our source for events
   sources:   
     - ansible.eda.kafka:
-        host: broker
+        host: kafka.example.com
         port: 9092
-        topic: eda-topic
+        topic: connect-dnf
         group_id:
 
-  ## Define the conditions we are looking for
   rules:
-    - name: Say Hello
-      condition: event.message == "Ansible is cool"
+    - name: receive event
+      condition: event.schema.type == "string"
       ## Define the action we should take should the condition be met
       action:
         run_playbook:
-          name: say-what.yml
+          name: dnf-event.yaml
+      delegate_to: localhost
